su2_cfd_src = files(['integration_structure.cpp',
                     'transport_model.cpp',
                     'fluid_model_pvdw.cpp',
                     'integration_time.cpp',
                     'fluid_model_pig.cpp',
                     'iteration_structure.cpp',
                     'fluid_model_inc.cpp',
                     'definition_structure.cpp',
                     'fluid_model.cpp',
                     'fluid_model_ppr.cpp',
                     'python_wrapper_structure.cpp',
                     'CMarkerProfileReaderFVM.cpp',
                     'SU2_CFD.cpp'])

su2_cfd_src += files(['output/CAdjElasticityOutput.cpp',
                      'output/CAdjFlowCompOutput.cpp',
                      'output/CAdjFlowIncOutput.cpp',
                      'output/CAdjHeatOutput.cpp',
                      'output/CBaselineOutput.cpp',
                      'output/CMultizoneOutput.cpp',
                      'output/CElasticityOutput.cpp',
                      'output/CFlowCompOutput.cpp',
                      'output/CFlowCompFEMOutput.cpp',
                      'output/CFlowOutput.cpp',
                      'output/CFlowIncOutput.cpp',
                      'output/CHeatOutput.cpp',
                      'output/CMeshOutput.cpp',
                      'output/output_physics.cpp',
                      'output/COutput.cpp',
                      'output/output_structure_legacy.cpp',
                      'output/filewriter/CParallelDataSorter.cpp',
                      'output/filewriter/CFVMDataSorter.cpp',
                      'output/filewriter/CFEMDataSorter.cpp',
                      'output/filewriter/CSurfaceFEMDataSorter.cpp',
                      'output/filewriter/CSurfaceFVMDataSorter.cpp',
                      'output/filewriter/CParallelFileWriter.cpp',
                      'output/filewriter/CParaviewFileWriter.cpp',
                      'output/filewriter/CParaviewBinaryFileWriter.cpp',
                      'output/filewriter/CTecplotFileWriter.cpp',
                      'output/filewriter/CTecplotBinaryFileWriter.cpp',
                      'output/filewriter/CCSVFileWriter.cpp',
                      'output/filewriter/CSTLFileWriter.cpp',
                      'output/filewriter/CSU2FileWriter.cpp',
                      'output/filewriter/CSU2BinaryFileWriter.cpp',
                      'output/filewriter/CSU2MeshFileWriter.cpp',
                      'output/tools/CWindowingTools.cpp'])

su2_cfd_src += files(['variables/CIncNSVariable.cpp',
                      'variables/CTransLMVariable.cpp',
                      'variables/CAdjEulerVariable.cpp',
                      'variables/CHeatFVMVariable.cpp',
                      'variables/CTurbVariable.cpp',
                      'variables/CAdjNSVariable.cpp',
                      'variables/CBaselineVariable.cpp',
                      'variables/CDiscAdjFEAVariable.cpp',
                      'variables/CDiscAdjFEABoundVariable.cpp',
                      'variables/CDiscAdjMeshBoundVariable.cpp',
                      'variables/CFEABoundVariable.cpp',
                      'variables/CDiscAdjVariable.cpp',
                      'variables/CTurbSAVariable.cpp',
                      'variables/CFEAVariable.cpp',
                      'variables/CMeshVariable.cpp',
                      'variables/CMeshBoundVariable.cpp',
                      'variables/CMeshElement.cpp',
                      'variables/CTurbSSTVariable.cpp',
                      'variables/CVariable.cpp',
                      'variables/CNSVariable.cpp',
                      'variables/CAdjTurbVariable.cpp',
                      'variables/CIncEulerVariable.cpp',
                      'variables/CEulerVariable.cpp'])

su2_cfd_src += files(['solvers/CAdjEulerSolver.cpp',
                      'solvers/CAdjNSSolver.cpp',
                      'solvers/CAdjTurbSolver.cpp',
                      'solvers/CBaselineSolver.cpp',
                      'solvers/CBaselineSolver_FEM.cpp',
                      'solvers/CDiscAdjFEASolver.cpp',
                      'solvers/CDiscAdjMeshSolver.cpp',
                      'solvers/CDiscAdjSolver.cpp',
                      'solvers/CEulerSolver.cpp',
                      'solvers/CFEASolver.cpp',
                      'solvers/CFEM_DG_EulerSolver.cpp',
                      'solvers/CFEM_DG_NSSolver.cpp',
                      'solvers/CHeatSolverFVM.cpp',
                      'solvers/CIncEulerSolver.cpp',
                      'solvers/CIncNSSolver.cpp',
                      'solvers/CMeshSolver.cpp',
                      'solvers/CNSSolver.cpp',
                      'solvers/CSolver.cpp',
                      'solvers/CTemplateSolver.cpp',
                      'solvers/CTransLMSolver.cpp',
                      'solvers/CTurbSolver.cpp',
                      'solvers/CTurbSASolver.cpp',
                      'solvers/CTurbSSTSolver.cpp'])

su2_cfd_src += files(['numerics/CNumerics.cpp',
                      'numerics/template/CSource_Template.cpp',
                      'numerics/template/CConvective_Template.cpp',
                      'numerics/template/CViscous_Template.cpp',
                      'numerics/transition/CAvgGradCorrected_TransLM.cpp',
                      'numerics/transition/CUpwLin_TransLM.cpp',
                      'numerics/transition/CAvgGrad_TransLM.cpp',
                      'numerics/transition/CUpwSca_TransLM.cpp',
                      'numerics/transition/CSourcePieceWise_TransLM.cpp',
                      'numerics/heat/CCentSca_Heat.cpp',
                      'numerics/heat/CUpwSca_Heat.cpp',
                      'numerics/heat/CAvgGradCorrected_Heat.cpp',
                      'numerics/heat/CAvgGrad_Heat.cpp',
                      'numerics/flow/diffusion/CAvgGradInc_Flow.cpp',
                      'numerics/flow/diffusion/CAvgGrad_Base.cpp',
                      'numerics/flow/diffusion/CAvgGrad_Flow.cpp',
                      'numerics/flow/diffusion/CGeneralAvgGrad_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwCUSP_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwMSW_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwAUSMPLUS_SLAU_Base_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwTurkel_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwL2Roe_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwFDSInc_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwHLLC_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwSLAU_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwGeneralRoe_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwAUSMPLUSUP_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwGeneralHLLC_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwRoe_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwAUSMPLUSUP2_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwRoeBase_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwAUSM_Flow.cpp',
                      'numerics/flow/convection_upwind/CUpwLMRoe_Flow.cpp',
                      'numerics/flow/sources/CSourceWindGust.cpp',
                      'numerics/flow/sources/CSourceRotatingFrame_Flow.cpp',
                      'numerics/flow/sources/CSourceIncAxisymmetric_Flow.cpp',
                      'numerics/flow/sources/CSourceIncBodyForce.cpp',
                      'numerics/flow/sources/CSourceIncRotatingFrame_Flow.cpp',
                      'numerics/flow/sources/CSourceGravity.cpp',
                      'numerics/flow/sources/CSourceBodyForce.cpp',
                      'numerics/flow/sources/CSourceAxisymmetric_Flow.cpp',
                      'numerics/flow/sources/CSourceBoussinesq.cpp',
                      'numerics/flow/convection_centered/CCentBase_Flow.cpp',
                      'numerics/flow/convection_centered/CCentJSTInc_Flow.cpp',
                      'numerics/flow/convection_centered/CCentJST_KE_Flow.cpp',
                      'numerics/flow/convection_centered/CCentJST_Flow.cpp',
                      'numerics/flow/convection_centered/CCentLaxInc_Flow.cpp',
                      'numerics/flow/convection_centered/CCentLax_Flow.cpp',
                      'numerics/elasticity/CFEAMeshElasticity.cpp',
                      'numerics/elasticity/CFEM_DielectricElastomer.cpp',
                      'numerics/elasticity/CFEALinearElasticity.cpp',
                      'numerics/elasticity/CFEAElasticity.cpp',
                      'numerics/elasticity/CFEANonlinearElasticity.cpp',
                      'numerics/elasticity/CFEM_NeoHookean_Comp.cpp',
                      'numerics/elasticity/CFEM_Knowles_NearInc.cpp',
                      'numerics/elasticity/CFEM_IdealDE.cpp',
                      'numerics/continuous_adjoint/CAvgGradCorrected_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CSourceRotatingFrame_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CUpwSca_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CAvgGradCorrected_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CSourceConservative_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CSourceAxisymmetric_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CSourceConservative_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CAvgGrad_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CUpwRoe_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CSourcePieceWise_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CCentLax_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CSourceViscous_AdjFlow.cpp',
                      'numerics/continuous_adjoint/CAvgGrad_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CUpwLin_AdjTurb.cpp',
                      'numerics/continuous_adjoint/CCentJST_AdjFlow.cpp',
                      'numerics/turbulent/CUpwSca_TurbSST.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSA_E.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSA.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSA_Neg.cpp',
                      'numerics/turbulent/CAvgGrad_TurbSA.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSA_E_COMP.cpp',
                      'numerics/turbulent/CUpwScalar.cpp',
                      'numerics/turbulent/CAvgGrad_TurbSA_Neg.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSST.cpp',
                      'numerics/turbulent/CSourcePieceWise_TurbSA_COMP.cpp',
                      'numerics/turbulent/CUpwSca_TurbSA.cpp',
                      'numerics/turbulent/CAvgGrad_Scalar.cpp',
                      'numerics/turbulent/CAvgGrad_TurbSST.cpp'])

su2_cfd_src += files(['interfaces/CInterface.cpp',
                      'interfaces/cfd/CConservativeVarsInterface.cpp',
                      'interfaces/cfd/CMixingPlaneInterface.cpp',
                      'interfaces/cfd/CSlidingInterface.cpp',
                      'interfaces/cht/CConjugateHeatInterface.cpp',
                      'interfaces/fsi/CDisplacementsInterface.cpp',
                      'interfaces/fsi/CFlowTractionInterface.cpp',
                      'interfaces/fsi/CDiscAdjFlowTractionInterface.cpp',
                      'interfaces/fsi/CDisplacementsInterfaceLegacy.cpp',
                      'interfaces/fsi/CDiscAdjDisplacementsInterfaceLegacy.cpp'])

su2_cfd_src += files(['drivers/CDriver.cpp',
                      'drivers/CMultizoneDriver.cpp',
                      'drivers/CSinglezoneDriver.cpp',
                      'drivers/CDiscAdjMultizoneDriver.cpp',
                      'drivers/CDiscAdjSinglezoneDriver.cpp',
                      'drivers/CDummyDriver.cpp'])

if get_option('enable-normal')
  su2_cfd = executable('SU2_CFD',
                       su2_cfd_src, 
                       install : true, 
                       dependencies : [su2_deps, common_dep], 
                       cpp_args:  ['-fPIC'] + [default_warning_flags, su2_cpp_args])
endif

if get_option('enable-autodiff')
  su2_cfd_ad = executable('SU2_CFD_AD',
                       su2_cfd_src,
                       install : true, 
                       dependencies : [su2_deps, codi_dep, commonAD_dep], 
                       cpp_args: ['-fPIC'] + [default_warning_flags, su2_cpp_args, codi_rev_args])
endif

if get_option('enable-directdiff')
  su2_cfd_dd = executable('SU2_CFD_DIRECTDIFF',
                       su2_cfd_src,
                       install : true, 
                       dependencies : [su2_deps, codi_dep, commonDD_dep], 
                       cpp_args: ['-fPIC'] + [default_warning_flags, su2_cpp_args, codi_for_args])
endif

